--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,7 +590,9 @@ h6 {
 .portfolio .portfolio-item figure {
   background: #000;
   overflow: hidden;
-  /* height: 240p ; */
+  max-height: 240px;
+  height: 240px;
+  min-height: 240px;
   position: relative;
   border-radius: 4px 4px 0 0;
   margin: 0;
