--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,7 +686,7 @@ h6 {
 .testimonials .testimonial-item {
   box-sizing: content-box;
   padding: 30px 30px 0 30px;
-  margin: 30px 15px;
+  /* margin: 30px 15px; */
   text-align: center;
   min-height: 350px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
